fix: Contrast for restaurant page

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,7 @@ nav h1 a {
   width: 50%;
 }
 #restaurant-name {
-  color: #f18200;
+	color: #a95a00;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -319,7 +319,7 @@ nav h1 a {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #a95a00;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
